Добавлен Api для модели Resumes
